	* src/SDCCpeeph.c (labelIsUncondJump): new, added, other targets could
	  take advantage of it too
	* src/z80/gen.c (genIpush): push b, d or h directly instead of using a,
	  (shiftR2Left2Result): Optimized: don't check shifting by 0
	* src/z80/peeph-z80.def,
	* src/z80/peeph.def: whole set of new rules by Philipp Krause with some
	  modifications, see patch 1700823

2007-05-05 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/Makefile.common.in,
	  device/lib/pic/Makefile.common.in, sim/ucsim/cmd.src/Makefile.in:
	  removed bash dependencies

2007-05-01 Borut Razem <borut.razem AT siol.net>

	* src/SDCCicode.c:
	  fixed bug #1710507: --i-code-in-asm makes compile fail
	  all iCode comments are now one liners
	* src/mcs51/gen.c: fixed memory leak

2007-05-01 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/*.c
	* device/include/pic/*.h: regenerated all device libs from updated
	  .inc files
	* support/scripts/inc2h.pl: documented usage, now uses strict to
	  catch more bugs

2007-04-30 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx:
	  fixed bug #1669175: Problem with space in output paths
	  documented how to use paths with spaces for Windows users

2007-04-29 Borut Razem <borut.razem AT siol.net>

	* Fixed svn:eol-style and svn:keywords properties
	* src/SDCCval.c: fixed bug
	  #1592871: Segfault with "large" const arrays of characters
	  replaced recursion with iteration
	* Removed svn:executable property from non-executable files

2007-04-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genRet): fixed bug 1707003

2007-04-27 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (pBlockRemoveUnusedLabels,pic16_pBlockAddInval,
	  createReachingDefinitions,assignValnums,pic16_destructDF,
	  pic16_createDF,pic16_vcg_dumpedges,pic16_vcg_dump_default):
	  prevent NULL pointer dereferences
	* device/lib/pic/libdev/pic16f886.c,
	* device/lib/pic/libdev/pic16f887.c: svn mv'ed to disabled_* to